# friendly-solution-corp

./: .pre-commit-config.yaml  manage.py  pyproject.toml
photos/: apps.py  asgi.py  models.py  settings.py  urls.py  views.py  wsgi.py
photos/migrations/: 0001_initial.py
